--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
 
 <p style="font-weight:bold;">留言区:  (现共有<span id="impression_num"></span>条用户留言)</p></B>
 <!--------------- 留言区开始 新的留言请放在最上面--------------------->
-
+	  
+<p align="center" style ="color: black;font-weight:bold;font-size:40px;background-color:white;;font-family:楷体" >
+        每一段旅程的结束都是另一段旅程的开始，人的一生永远在前进的道路上，不休不止！<br>
+                        ——javaEE190919-xiaoshu <br>
+</p>
 
 <p class ="impression" style="color: #0099FF;font-size: 20px;font-family: 楷体">
 			  有些珍贵的东西，你得到了如果不去珍惜，它就会变的黯淡无光。<br>
